[gd_scene load_steps=2 format=3 uid="uid://dxqmk8f3nw5pe"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Resume"

[node name="ControlsButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Controls"

[node name="DifficultyButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Difficulty"

[node name="LevelsButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Levels"

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Quit"
